--- a/.env.dist
+++ b/.env.dist
@@ -1,13 +1,13 @@
-# env template file, copy to process.env file and fill values
-
-# http://localhost:SHARD_PORT
-LOCAL_URL="http://localhost:"
-
-# https://colosseum_rpc_url
-COLOSSEUM_URL="https://"
-
-# https://garden_rpc_url
-GARDEN_URL="https://"
-
-# private key of deployer address
-PRIVATE_KEY=""
+PRIMEPK=""
+CYPRUSPK=""
+PAXOSPK=""
+HYDRAPK=""
+CYPRUS1PK=""
+CYPRUS2PK=""
+CYPRUS3PK=""
+PAXOS1PK=""
+PAXOS2PK=""
+PAXOS3PK=""
+HYDRA1PK=""
+HYDRA2PK=""
+HYDRA3PK=""
