--- a/Solidity/package.json
+++ b/Solidity/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
+		"@openzeppelin/contracts": "^5.0.1",
 		"dotenv": "^16.4.3",
 		"hardhat": "^2.19.5",
 		"quais": "^0.1.17",
