--- a/Solidity/package.json
+++ b/Solidity/package.json
@@ -7,6 +7,7 @@
 		"quais-polling": "^1.0.4"
 	},
 	"devDependencies": {
-		"@nomicfoundation/hardhat-toolbox": "^4.0.0"
+		"@nomicfoundation/hardhat-toolbox": "^4.0.0",
+		"@nomicfoundation/hardhat-verify": "^2.0.4"
 	}
 }
