chore: update .env.dist add contract arguments

--- a/.env.dist
+++ b/.env.dist
@@ -24,3 +24,23 @@ PAXOS3URL="https://rpc.paxos3.colosseum.quaiscan.io"
 HYDRA1URL="https://rpc.hydra1.colosseum.quaiscan.io"
 HYDRA2URL="https://rpc.hydra2.colosseum.quaiscan.io"
 HYDRA3URL="https://rpc.hydra3.colosseum.quaiscan.io"
+
+# QRC721 Arguments
+QRC721_NAME="TestQRC721" # Name of collection
+QRC721_SYMBOL="TQ721" # Collection symbol
+QRC721_BASE_URI="ipfs://METADATA_CID/" # Base URI for token metadata (make sure to keep the slash at the end)
+
+# ERC721 Arguments
+ERC721_NAME="TestQRC721" # Name of collection
+ERC721_SYMBOL="TQ721" # Collection symbol
+ERC721_BASE_URI="ipfs://METADATA_CID/" # Base URI for token metadata (make sure to keep the slash at the end)
+
+# QRC20 Arguments
+QRC20_NAME="TestQRC20" # Name of token
+QRC20_SYMBOL="TQ20" # Symbol of token
+QRC20_INITIALSUPPLY=1000000 # Initial supply of token, will be minted to deployer
+
+# ERC20 Arguments
+ERC20_NAME="TestQRC20" # Name of token
+ERC20_SYMBOL="TQ20" # Symbol of token
+ERC20_INITIALSUPPLY=1000000 # Initial supply of token, will be minted to deployer
