Update env example

--- a/.env.dist
+++ b/.env.dist
@@ -34,6 +34,7 @@ QRC721_BASE_URI="ipfs://METADATA_CID/" # Base URI for token metadata (make sure 
 ERC721_NAME="TestQRC721" # Name of collection
 ERC721_SYMBOL="TQ721" # Collection symbol
 ERC721_BASE_URI="ipfs://METADATA_CID/" # Base URI for token metadata (make sure to keep the slash at the end)
+ERC721_MAX_TOKENS=1000 # Maximum number of tokens that can be minted
 
 # QRC20 Arguments
 QRC20_NAME="TestQRC20" # Name of token
