upgrade deps for golden age

--- a/SolidityX/package.json
+++ b/SolidityX/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
-    "dotenv": "^16.4.3",
+    "@openzeppelin/contracts": "^4.0.0",
+    "dotenv": "^16.4.5",
     "hardhat": "^2.19.5",
     "quai-hardhat-plugin": "^1.0.3",
-    "quais": "^0.1.17",
-    "quais-polling": "^1.0.4"
+    "quais": "^1.0.0-alpha.7"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^4.0.0"
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0"
   }
 }
