Added Permit standard to ERC20, deployed metadata to IPFS, and added Proxy support

--- a/Solidity/package.json
+++ b/Solidity/package.json
@@ -3,7 +3,9 @@
 		"@openzeppelin/contracts": "^5.0.0",
 		"dotenv": "^16.4.5",
 		"hardhat": "^2.19.5",
-		"quais": "^1.0.0-alpha.22"
+		"@quai/quais-upgrades": "^3.8.14",
+		"quais": "^1.0.0-alpha.36",
+		"@quai/hardhat-deploy-metadata": "^1.0.4"
 	},
 	"devDependencies": {
 		"@nomicfoundation/hardhat-toolbox": "^5.0.0"
